--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block Blast - Puzzle Game</title>
+    <title>FernieX-Block's - Puzzle Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="logo">
                 <div class="logo-icon">🧩</div>
-                <h1 class="title">BLOCK BLAST</h1>
+                <h1 class="title">FernieX Block's</h1>
             </div>
             <div class="score-container">
                 <div class="score-label">СЧЁТ</div>
@@ -105,4 +105,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
